content_script.js executing.

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Bookmark2.0</title>
+    <title>AddBookmark</title>
     <style>
       body {
         min-width:357px;
@@ -18,9 +18,6 @@
         margin-bottom: 0px;
       }
     </style>
-
-    <!-- JavaScript and HTML must be in separate files for security. -->
-    <script src="popup.js"></script>
   </head>
   <body>
     <p id="title">Bookmark</p>
@@ -29,5 +26,6 @@
     <button>Remove</button>
     <button style="float:right;">Done</button>
     <button style="float:right;">Edit...</button>
+    <script src="popup.js"></script>
   </body>
 </html>
