Set title name in popup

--- a/popup.html
+++ b/popup.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <p id="title">Bookmark</p>
-    <label for="bookmark_name">Name:</label> <input type="text" name="bookmark_name"/><br>
-    <label for="bookmark_folder">Folder:</label> <select type="select" name="bookmark_folder"></select><br>
+    <label for="bookmark_name">Name:</label> <input id="bookmark_title" type="text" name="bookmark_name"/><br>
+    <label for="bookmark_folder">Folder:</label> <select id="bookmark_folders" type="select" name="bookmark_folder"></select><br>
     <button>Remove</button>
     <button style="float:right;">Done</button>
     <button style="float:right;">Edit...</button>
