--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
   <body>
     <p id="title">Bookmark</p>
     <label for="bookmark_name">Name:</label> <input id="bookmark_title" type="text" name="bookmark_name" size="40"/><br>
-    <label for="bookmark_folder">Folder:</label> <select id="bookmark_folders" type="select" name="bookmark_folder"></select><br>
+    <label for="bookmark_folders">Folder:</label> <select id="bookmark_folders" type="select" name="bookmark_folder"></select><br>
     <button>Remove</button>
     <button style="float:right;">Done</button>
     <button style="float:right;">Edit...</button>
