--- a/popup.html
+++ b/popup.html
@@ -22,10 +22,11 @@
   <body>
     <p id="title">Bookmark</p>
     <label for="bookmark_name">Name:</label> <input id="bookmark_title" type="text" name="bookmark_name" size="40"/><br>
-    <label for="bookmark_folders">Folder:</label> <select id="bookmark_folders" type="select" name="bookmark_folder"></select><br>
-    <button>Remove</button>
-    <button style="float:right;">Done</button>
-    <button style="float:right;">Edit...</button>
+    <label for="bookmark_folders">Folder:</label> <select id="bookmark_folders" type="select" name="bookmark_folder"></select> 
+    <input type="button" id="last_folder" style="float:right" value="Last used folder"/>
+    <input type="button" id ="remove" style="clear:left;" value="Remove"/>
+    <input type="button" id ="done" style="float:right;" value="Done"/>
+    <button id = "edit" style="float:right;">Edit...</button>
     <script src="popup.js"></script>
   </body>
 </html>
