--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -10,6 +10,9 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="../classifier.js"></script>
+  <script type="text/javascript" src="../naivebayes.js"></script>
+  <script type="text/javascript" src="../Porter-Stemmer/PorterStemmer1980.min.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/ClassifierSpec.js"></script>
